# gampy

./: .gitignore  README.md  build.bat  build.sh  gampy.cfg  main.py  pyproject.toml
.github/workflows/: auto-merge.yml
gampy/: __main__.py  gamp.py
gampy/utils/: commands.py  coord.py  date.py
