[tool.poetry]
name = "gampy"
version = "1.0.0"
description = "Tool for calculation of the precise point position (PPP) error using GAMP utility."
authors = ["Semen Syrovatskiy <mail@syrovatskiy.tk>"]

[tool.poetry.dependencies]
python = "^3.9,<3.11"
numpy = "^1.22.3"
pandas = "^1.4.2"
pyinstaller = "^4.10"

[tool.poetry.dev-dependencies]
black = "^22.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
